optimize google sign in

--- a/src/main/resources/i18/messages_vi.properties
+++ b/src/main/resources/i18/messages_vi.properties
@@ -1,6 +1,6 @@
-label.categories = The loai
-label.search = Tim kiem
-label.account = Tai khoan
-label.cart = Gio hang
-label.search_holder = "Sach hoac tac gia muon tim..."
-label.languages = Ngon ngu
+label.categories = Th\u1EC3 lo\u1EA1i
+label.search = Tìm ki\u1EBFm
+label.account = Tài kh\u1ECo\u1EA3n
+label.cart = Gi\u1ECF hàng
+label.search_holder = "Sách h\u01Showcj tác gi\u1EA3 mu\u1ED1n tìm"
+label.languages = Ngôn ng\u01B\u1EEF
